8359603: Add missing notification